--- a/GameChoice/Games/flappyBird.html
+++ b/GameChoice/Games/flappyBird.html
@@ -34,7 +34,6 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <link rel="icon" type="jpg/png" href="../../pageIcon.png">
-  <link rel="stylesheet" type="text/css" href="topnav.css">
   <link id="CSS" rel="stylesheet" type="text/css" href="gameOptions.css">
   <script src="gameOptions.js"></script>
   <script>
@@ -94,7 +93,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
           <div class="inputLine">
             <label for="main">Hlavní postava:</label>
             <img class="normalIcon" name="inputImage" id="mainCharacterIcon" alt="icon" src = "FlappyBird/BirdYellow.png">
-            <select name="character" id="character" onclick='onCustomOptionChange("character", "mainCharacterIcon", "FlappyBird/BirdYellow.png", "FlappyBird/BirdRed.png", "FlappyBird/BirdGreen.png")'>
+            <select name="inputPlayer" id="character" onclick='onCustomOptionChange("inputCharacter", "character", "mainCharacterIcon", "FlappyBird/BirdYellow.png", "FlappyBird/BirdRed.png", "FlappyBird/BirdGreen.png")'>
               <option value="1">Žlutý pták (výchozí)</option>
               <option value="2">Červený pták</option>
               <option value="3">Zelený pták</option>
@@ -105,7 +104,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
           <div class="inputLine">
             <label for="pipes">Trubky:</label>
             <img class="normalIcon" id="PipeIcon" name="inputImage" alt="icon" src = "FlappyBird/PipeGreen.png" style="width: 15px">
-            <select name="pipe" id="pipe" onclick='onCustomOptionChange("pipe", "PipeIcon", "FlappyBird/PipeGreen.png", "FlappyBird/PipeYellow.png", "FlappyBird/PipePlastic.png")'>
+            <select name="inputPlayer" id="pipe" onclick='onCustomOptionChange("inputPipe", "pipe", "PipeIcon", "FlappyBird/PipeGreen.png", "FlappyBird/PipeYellow.png", "FlappyBird/PipePlastic.png")'>
               <option value="1">Zelená trubka (výchozí)</option>
               <option value="2">Žlutá trubka</option>
               <option value="3">Plastová trubka</option>
@@ -116,7 +115,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
           <div class="inputLine">
             <label for="background">Pozadí:</label>
             <img class="normalIcon" id="backgroundIcon" name="inputImage" alt="icon" src = "FlappyBird/BackgroundCity.png" style="width: 60px">
-            <select name="background" id="background" onclick=
+            <select name="inputPlayer" id="background" onclick=
             'onCustomOptionChange("background", "backgroundIcon", "FlappyBird/BackgroundCity.png", "FlappyBird/BackgroundForest.png", "FlappyBird/BackgroundDesert.png")'>
               <option value="1">Město (výchozí)</option>
               <option value="2">Les</option>
@@ -129,13 +128,13 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
           <p class="descriptionTitle"> Zvukové efekty: </p>
           <div class="inputLine">
             <label for="main">Zvuk skoku:</label>
-            <select name="character" id="flySound" onclick='onCustomSoundOptionChange("flySound", "audio2", "flySoundPreview", "FlappyBird/fly1.mp3", "FlappyBird/fly2.mp3", "FlappyBird/kokodak.mp3", "inputCharacter3")'>
+            <select name="inputPlayer" id="flySound" onclick='onCustomSoundOptionChange("flySound", "audio2", "flySoundPreview", "FlappyBird/fly1.mp3", "FlappyBird/fly2.mp3", "FlappyBird/kokodak.mp3", "inputSound1")'>
               <option value="1">Mávnutí 1 (výchozí)</option>
               <option value="2">Mávnutí 2</option>
               <option value="3">Zvuk slepice</option>
             </select>
 
-            <input type="file" class="file" id="inputCharacter3" name="inputAudio" accept="audio/mpeg, audio/wav" onchange="onCustomSoundChange('inputCharacter3', 'flySoundPreview', 'audio2')"/>
+            <input type="file" class="file" id="inputSound1" name="inputAudio" accept="audio/mpeg, audio/wav" onchange="onCustomSoundChange('inputSound1', 'flySoundPreview', 'audio2')"/>
             <audio id="audio2" controls="controls">
               <source id="flySoundPreview" type="audio/mpeg"  name="sourceAudio" src = "FlappyBird/fly1.mp3"> </source>
             </audio>            
@@ -143,13 +142,13 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
           <br><br><br> <br><br><br>
           <div class="inputLine">
             <label for="main">Zvuk získání bodu:</label>
-            <select name="character" id="passSound" onclick='onCustomSoundOptionChange("passSound", "audio1", "passSoundPreview", "FlappyBird/pass1.wav", "FlappyBird/pass2.wav", "FlappyBird/pass3.wav", "inputCharacter2")'>
+            <select name="inputPlayer" id="passSound" onclick='onCustomSoundOptionChange("passSound", "audio1", "passSoundPreview", "FlappyBird/pass1.wav", "FlappyBird/pass2.wav", "FlappyBird/pass3.wav", "inputSound2")'>
               <option value="1">Cinknutí 1 (výchozí)</option>
               <option value="2">Cinknutí 2</option>
               <option value="3">Cinknutí 3</option>
             </select>
 
-            <input type="file" class="file" id="inputCharacter2" name="inputAudio" accept="audio/mpeg, audio/wav" onchange="onCustomSoundChange('inputCharacter2', 'passSoundPreview', 'audio1')"/>
+            <input type="file" class="file" id="inputSound2" name="inputAudio" accept="audio/mpeg, audio/wav" onchange="onCustomSoundChange('inputSound2', 'passSoundPreview', 'audio1')"/>
             <audio id="audio1" controls="controls"> 
               <source id="passSoundPreview"  name="sourceAudio" src = "FlappyBird/pass1.wav"> </source>
             </audio>        
