analytics und finish

--- a/landAdFacebook0.html
+++ b/landAdFacebook0.html
@@ -186,7 +186,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
 
             </div>              
 
-                <button class="create" onclick='window.open("https://vlastni-hry.x10.mx/analytics/analyticsAdd.php?variable=landPageClicks&returnPage=https://vlastni-hry.cz/firstStep.html", "_self")'> <b> Začít tvořit hru </button>
+                <button class="create" onclick='window.open("https://vlastni-hry.x10.mx/analytics/analyticsAdd.php?variable=LandPage_Clicks_0&returnPage=https://vlastni-hry.cz/firstStep.html", "_self")'> <b> Začít tvořit hru </button>
           </div>
       </div>
     </content>
