--- a/GameChoice/Games/catching.html
+++ b/GameChoice/Games/catching.html
@@ -178,7 +178,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
           <p class="descriptionTitle"> Kontaktní údaje: </p>
           <br><br>
           <div class="inputLine">
-            <label for="main">Váš email (email na který vám přijde Vaše hra):</label>
+            <label for="main">Váš email (musí být stejný, jako jste zadávali při platbě):</label>
             <input class="text" type="text" id="email" name="input" value="">      
           </div>
         </div>   
