--- a/firstStep.html
+++ b/firstStep.html
@@ -36,13 +36,19 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
   <link id="css" rel="stylesheet" type="text/css" href="land.css">
 
   <script>
+    function analytics(){
+      var url2 = "https://buy.stripe.com/8wM4kefccc2q7166oq?prefilled_email=" + document.getElementById("email").value.replace("@", "%40") + "&locale=cs";
+      window.open("https://vlastni-hry.x10.mx/analytics/analyticsAdd.php?variable=StepEmail_Clicks&returnPage=" +  url2, "_self");      
+    }
     function detectMob() {
       return ((window.innerHeight / window.innerWidth) > 1.3);
     }
     function sendEmail(){
       if(document.getElementById("email").value.includes("@")){
-        var url2 = "https://buy.stripe.com/8wM4kefccc2q7166oq?prefilled_email=" + document.getElementById("email").value.replace("@", "%40") + "&locale=cs";
-        window.open("https://vlastni-hry.x10.mx/analytics/emailAdd.php?value=" + document.getElementById("email").value + "&returnPage=" + url2, "_self");
+        
+
+        window.open("https://vlastni-hry.x10.mx/analytics/emailAdd.php?value=" + document.getElementById("email").value + "&returnPage=firstStep.html", "_self");
+        setTimeout(analytics, 100);
       }else{
         document.getElementById("email").style.border = "2px Solid red";
       }
