--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
                 <button onclick='getPackage("Classic")'> Vybrat předlohu </button>
               </form>
           </div>
-          <div class="package">
+          <!-- <div class="package">
             <img class="preview" src="speedIcon.jpg" alt="betterIcon">
             <p class="TextBoxTitle"> <b> Rychlejší dokončení vlastní hry</b> </p class="TextBoxTitle">
             <br>
@@ -100,7 +100,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
             <form action="firstStep.html">
                 <button onclick='getPackage("fast")'> Vybrat předlohu </button>
               </form>
-          </div>
+          </div> -->
 
         </div>
       </div>
