--- a/GameChoice/Games/snake.html
+++ b/GameChoice/Games/snake.html
@@ -85,7 +85,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
           <br><br><br> <br>
           <div class="inputLine">
             <label for="scales">Výchozí ikona:</label>
-            <input type="checkbox" id="default" name="default" checked onclick="onCheckboxClick()"/>
+            <input type="checkbox" id="default" name="default" checked onclick="onCheckboxClick('Snake/icon.png')"/>
           </div>
           <br><br> <br>
         </div>
