--- a/landAdFacebook0Mobile.html
+++ b/landAdFacebook0Mobile.html
@@ -35,9 +35,21 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
    <link rel="stylesheet" href="videoSource/styleMobile.css" type="text/css">
   <link id="css" rel="stylesheet" type="text/css" href="landMobile.css">
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   </head><body>
+    <script>
 
+
+          function finish(){
+      url2 = "https://vlastni-hry.cz/firstStep.html";
+      $.ajax("https://vlastni-hry.x10.mx/analytics/analyticsAdd.php", {
+        async: false,
+        method: "GET",
+        data: {variable: "LandPage_0_Clicks"}
+      });
+      window.open(url2, "_self");     
+    }
+    </script>
     <content>
       <div id="intro">             
   
@@ -162,7 +174,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
 
             </div>              
 
-                <button class="create" onclick='window.open("https://vlastni-hry.x10.mx/analytics/analyticsAdd.php?variable=LandPage_Clicks_0&returnPage=https://vlastni-hry.cz/firstStep.html", "_self")'> <b> Začít tvořit hru </button>
+                <button class="create" onclick='finish()'> <b> Začít tvořit hru </button>
           </div>
       </div>
     </content>
