--- a/GameChoice/Games/catching.html
+++ b/GameChoice/Games/catching.html
@@ -51,13 +51,13 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
       <br>      
       <p class="mainTitle"> Nastavení hry:  </p>
       <div class="games-container">
-        <div class="package" style="height: 400px;">
-          <p class="firstDescriptionTitle"> Chytání do košíku </p>
-          <p class="firstDescription"> <b> <-- </b>Vyzkoušejte si hru  </p>
+        <div class="package56" style="height: 400px; width: 800px">
+          <p class="firstDescriptionTitleL"> Chytání do košíku </p>
+          <p class="firstDescriptionL"> <b> <-- </b>Vyzkoušejte si hru  </p>
           <br>
-          <p class="firstDescription"> Ovládání: <i> pohyb myši </i> </p>
+          <p class="firstDescriptionL"> Ovládání: <i> pohyb myši </i> </p>
           <br>
-          <p class="firstDescription"> Cíl hry: <i> sebrat 5 jablek </i> </p>
+          <p class="firstDescriptionL"> Cíl hry: <i> sebrat 5 jablek </i> </p>
           <iframe class="landscape" src="BuildCatching/CatchingGame.html"> </iframe>  
         </div>
         <div class="package" style="height: 400px;">
