--- a/GameChoice/Games/flappyBird.html
+++ b/GameChoice/Games/flappyBird.html
@@ -50,7 +50,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
       <br>      
       <p class="mainTitle"> Nastavení hry:  </p>
       <div class="games-container">
-        <div class="package" style="height: 400px;">
+        <div class="package" style="height: 500px; width: 525px">
           <p class="firstDescriptionTitle"> Flappy Bird </p>
           <p class="firstDescription"> <b> <-- </b>Vyzkoušejte si hru  </p>
           <br>
