--- a/GameChoice/gameChoice.html
+++ b/GameChoice/gameChoice.html
@@ -34,7 +34,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
 
   </head><body>
     <content>
-      <p class="mainTitle">  Vyberte si hru, která se vám líbí  </p>
+      <p class="mainTitle">  Vyberte si hru, která se vám líbí a na které budete pracovat </p>
       <br>      
   
       <br>
@@ -57,7 +57,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
         <div class="package">
           
           <div class="TextBoxTitle">
-            <p2> <b> PacMan </b> </p2>
+            <p2> <b> Pac-Man </b> </p2>
           </div>
           <a href="Games/pacman.html" target="_blank">          
             <img class="screenshot" src="Screenshots/Pacman.png" alt="icon">
@@ -85,7 +85,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
         <div class="package">
           
           <div class="TextBoxTitle">
-            <p2> <b> Sbírání co nejrychleji</b> </p2>
+            <p2> <b> Sbírání předmětů co nejrychleji</b> </p2>
           </div>
           <a href="Games/collecting.html" target="_blank">          
             <img class="screenshot" src="Screenshots/Collecting.png" alt="icon">
@@ -98,7 +98,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
         </div>
         <div class="package">
           <div class="TextBoxTitle">
-            <p2> <b> Chytání do košíku</b> </p2>
+            <p2> <b> Chytání předmětů do košíku</b> </p2>
           </div>
           <a href="Games/catching.html" target="_blank">          
             <img class="screenshot" src="Screenshots/Catching.png" alt="icon">
