--- a/landAdFacebook0.html
+++ b/landAdFacebook0.html
@@ -40,7 +40,6 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
       return ((window.innerHeight / window.innerWidth) > 1.3);
     }
     if(detectMob() == true) {
-      console.log("nig");
       window.open("landAdFacebook0Mobile.html", "_self");
     }
     function finish(){
@@ -176,7 +175,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
             <div class="TextBox">
 <br> <br> <br>     
               <p class="info">  •  Dárek, který<b> zaujme </b>  </i> </p> <br> <br> <br>              
-              <p class="info">  • <b>  Vaše vlastní </b> obrázky ve hře </i> </p> <br> <br> <br> 
+              <p class="info">  • <b>  Sleva 61% </b>  do poloviny Října </i> </p> <br> <br> <br> 
               <p class="info">  • Za <p class="daysCrossed"> <s> 5 dní </s> </p>  <p class="daysBig"> <b> 2 dny</b> </p>   hotovo </i> </p> 
 
 
@@ -191,11 +190,47 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
             <div class="TextBox">
               
 
-              <p class="info"> Vytvoříte si hru za 189 <p class="TextBoxPriceKc"> Kč </p> <p class="info"> a během 2 dnů <br> vám přijde na Váš e-mail odkaz nebo kód na stažení hry. </p> 
+              <p class="info"> Vytvořím vám hru za <p class="daysCrossed"> <s> 229Kč</s>  </p> <p class="info"> <b> 90<p class="TextBoxPriceKc">Kč </p> </b> <p class="info"> a během 2 dnů <br> vám přijde na Váš e-mail odkaz na stažení Vaší hry. </p> 
 
             </div>              
 
-                <button class="create" onclick='finish()'> <b> Začít tvořit hru </button>
+                <button class="create" onclick='finish()'> <b> Začít tvořit hru </b> </button>
+          </div>
+          <img class="screenshotL" src="review1.png">
+          <img class="screenshotR" src="review2.png">
+          <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+          <p class="TextBoxTitle"> Jak to funguje? </p>
+          <div class="TextBox">
+          <p class="info">  1) Vyzkoušejte a vyberte si typ hry  </i> </p> <br> <br> 
+          <p class="info">  2) Nastavte platformu pro vaší hru - Andriod nebo Windows  </i> </p> <br> <br> 
+          <p class="info">  3) Nastavte hru podle Vašich představ  </i> </p> <br> <br> 
+          <p class="info">  4) Hru po 2 dnech stáhněte na vaše zařízení  </i> </p> <br> <br> 
+        </div>
+
+        <img class="screenshotGG" src="moneyBack.jpg" alt="Screenshot">
+          <p class="TextBoxTitleR"> Výhody: </p>
+          <div class="TextBoxR">
+          <p class="info">  1) Sleva 60% <b> do konce Října </b> </i> </p> <br> <br> 
+          <p class="info">  2) Zrychlená doba dokončení hry - 2 dny  </i> </p> <br> <br> 
+          <p class="info">  3) Pokud se vám výsledná hra nebude líbit, <br>předěláme ji do potřebné formy  </i> </p> <br> <br> 
+          <p class="info">  4) <b> Doživotní </b> garance vrácení peněz - Pokud <br>už o hru nebuduete mít zájem, vrátíme Vám peníze </i> </p> <br> <br> 
+        </div>
+
+        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+          <div class="package2">
+            <img class="screenshot" src="pads.png" alt="Screenshot">              
+            <p class="TextBoxTitle"> <b> Vytvořte si vlastní hru </b> </p class="TextBoxTitle">
+
+
+
+            <div class="TextBox">
+              
+
+              <p class="info"> Vytvořím vám hru za <p class="daysCrossed"> <s> 229Kč</s>  </p> <p class="info"> <b> 90<p class="TextBoxPriceKc">Kč </p> </b> <p class="info"> a během 2 dnů <br> vám přijde na Váš e-mail odkaz na stažení Vaší hry. </p> 
+
+            </div>              
+
+                <button class="create" onclick='finish()'> <b> Začít tvořit hru </b> </button>
           </div>
       </div>
     </content>
