--- a/GameChoice/Games/collecting.html
+++ b/GameChoice/Games/collecting.html
@@ -50,13 +50,13 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
       <br>      
       <p class="mainTitle"> Nastavení hry:  </p>
       <div class="games-container">
-        <div class="package" style="height: 400px;">
+        <div class="package" style="height: 500px; width: 525px">
           <p class="firstDescriptionTitle"> Sbírání hub </p>
           <p class="firstDescription"> <b> <-- </b>Vyzkoušejte si hru  </p>
           <br>
           <p class="firstDescription"> Ovládání: <i> kliknutí myši </i> </p>
           <br>
-          <p class="firstDescription"> Cíl hry: <i> sesbírat co nejvíce hub <br> za 30 sekund </i> </p>
+          <p class="firstDescription"> Cíl hry: <i> sesbírat co <br>nejvíce hub  za 30 sekund </i> </p>
           <iframe class="portrait" src="BuildCollecting/CollectingGame.html"> </iframe>  
         </div>
         <div class="package" style="height: 400px;">
